Bug 262432 - [IFC][Cleanup] Fix layoutState() const correctness
Summary: [IFC][Cleanup] Fix layoutState() const correctness
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-29 22:12 PDT by zalan
Modified: 2023-10-01 16:43 PDT (History)
5 users (show)

See Also:


Attachments
Patch (12.96 KB, patch)
2023-09-29 22:14 PDT, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (12.96 KB, patch)
2023-10-01 14:58 PDT, zalan
no flags Details | Formatted Diff | Diff
Patch (12.96 KB, patch)
2023-10-01 15:10 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-09-29 22:12:31 PDT
ssia
Comment 1 zalan 2023-09-29 22:14:16 PDT
Created attachment 467991 [details]
Patch
Comment 2 zalan 2023-10-01 14:58:36 PDT
Created attachment 468008 [details]
[fast-cq]Patch
Comment 3 zalan 2023-10-01 15:10:42 PDT
Created attachment 468009 [details]
Patch
Comment 4 EWS 2023-10-01 16:42:25 PDT
Committed 268712@main (659a9961856a): <https://commits.webkit.org/268712@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 468008 [details].
Comment 5 Radar WebKit Bug Importer 2023-10-01 16:43:14 PDT
<rdar://problem/116321931>