[IFC][Cleanup] Fix layoutState() const correctness https://bugs.webkit.org/show_bug.cgi?id=262432

Reviewed by Antti Koivisto.

* Source/WebCore/layout/formattingContexts/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::layoutState):
(WebCore::Layout::FormattingContext::layoutState const): Deleted.
* Source/WebCore/layout/formattingContexts/FormattingContext.h:
(WebCore::Layout::FormattingContext::layoutState const):
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::FlexLayout):
(WebCore::Layout::FlexLayout::maxContentForFlexItem):
(WebCore::Layout::FlexLayout::flexBaseAndHypotheticalMainSizeForFlexItems):
(WebCore::Layout::FlexLayout::hypotheticalCrossSizeForFlexItems):
(WebCore::Layout::FlexLayout::flexContainer const):
(WebCore::Layout::FlexLayout::flexFormattingContext):
(WebCore::Layout::FlexLayout::maxContentForFlexItem const): Deleted.
(WebCore::Layout::FlexLayout::flexBaseAndHypotheticalMainSizeForFlexItems const): Deleted.
(WebCore::Layout::FlexLayout::hypotheticalCrossSizeForFlexItems const): Deleted.
(WebCore::Layout::FlexLayout::flexFormattingContext const): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.h:
(WebCore::Layout::LineBoxBuilder::layoutState const):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::InlineDisplayLineBuilder):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.h:
(WebCore::Layout::InlineDisplayLineBuilder::formattingContext):
(WebCore::Layout::InlineDisplayLineBuilder::layoutState const):

Canonical link: https://commits.webkit.org/268712@main